# ro-crate-profile-crater

./: .gitignore  Directory.Packages.props  README.md  RELEASE_NOTES.md  ROCratePCC.sln  package-lock.json  package.json  pyproject.toml  setup.cmd  tsconfig.json  vite.config.mts
src/: Package.Metadata.props
src/ROCratePCC/: Main.fs  README.md  ROCratePCC.Common.props  ROCratePCC.Javascript.fsproj  ROCratePCC.Python.fsproj  ROCratePCC.fsproj  index.ts
tests/ROCratePCC/: Main.fs  ROCratePCC.Tests.fsproj
tests/TestingUtils/: TestingUtils.fs  TestingUtils.fsproj
